Versione zero funzionante
Il conteggio non era implementato correttamente. Ho aggiunto il supporto
per scaricare la risposta json da Windows anche se non l'ho testata.
Ho provato a implementare factory+singleton per gestire le sorgenti.